# lab08

./: .coveralls.yml  CMakeLists.txt  Dockerfile
.github/workflows/: build.yml  docker-build.yml  docker.yml  release.yml
lab08-1/: CMakeLists.txt  README.md
lab08-1/src/: [other-source-files].cpp
lab08-1/tests/: test.cpp
solver_application/: CMakeLists.txt
solver_lib/: solver.cpp
tests/: CMakeLists.txt  test.cpp
